--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,58 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
-</html>
+---
+import '../styles/global.css';
+import MetaTags from '~/components/common/MetaTags.astro';
+import Header from '~/components/widgets/Header.astro';
+import Footer from '~/components/widgets/Footer.astro';
+import AdSense from '~/components/widgets/AdSense.astro';
+import { getI18N } from '~/utils/config';
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
+export interface Props {
+  title?: string;
+  description?: string;
+  image?: string;
+  canonical?: string | URL;
+  noindex?: boolean;
+  nofollow?: boolean;
+}
+
+const { language, textDirection } = getI18N();
+
+const {
+  title,
+  description,
+  image,
+  canonical,
+  noindex = false,
+  nofollow = false,
+} = Astro.props;
+---
+
+<!doctype html>
+<html lang={language} dir={textDirection} class="2xl:text-[20px]">
+  <head>
+    <MetaTags
+      title={title}
+      description={description}
+      image={image}
+      canonical={canonical}
+      noindex={noindex}
+      nofollow={nofollow}
+    />
+    <link rel="icon" type="image/webp" href="/favicon-lucrinho.webp" />
+    <meta name="generator" content={Astro.generator} />
+  </head>
+  <body class="antialiased text-default bg-page tracking-tight">
+    <Header />
+    
+    <!-- Google AdSense - Header Top Banner -->
+    <AdSense 
+      adSlot="YYYYYYYYYY"
+      noPadding={true}
+    />
+    
+    <main>
+      <slot />
+    </main>
+    <Footer />
+  </body>
+</html>
