--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -17,6 +17,8 @@ const { links = [], secondaryLinks = [] } = footerData;
               alt="Lucrinho" 
               width="133" 
               height="24"
+              loading="lazy"
+              decoding="async"
               class="logo-lucrinho-footer"
             />
           </a>
