--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -77,7 +77,7 @@
     font-family: 'Trenda';
     font-style: normal;
     font-weight: 600;
-    font-display: block;
+    font-display: swap;
     src: url('/src/assets/font/Trenda Semibold.otf') format('opentype');
   }
 
