--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -19,6 +19,7 @@ import RateCard from '../common/RateCard.astro';
             imageUrl="/placeholder-stock-market.jpg"
             href="/artigo/bolha-ia"
             size="large"
+            isPrimary={true}
           />
           <RelatedLinks
             links={[
